# bilinear_filter_simd

./: .clang-format  .gitignore  .gitmodules  Benchmarks.md  CMakeLists.txt  Dockerfile  README.md  Readme.md  docker-compose.yml
src/: common.hpp  main.cpp
src/benchmark/: benchmark_avx512_single_thread.hpp  bilinear_avx2_multi_thread.hpp  bilinear_avx2_single_thread.hpp  bilinear_avx512_multi_thread.hpp  bilinear_avx512_single_thread.hpp  bilinear_plain_multi_thread.hpp  bilinear_plain_single_thread.hpp  bilinear_sse4_multi_thread.hpp  bilinear_sse4_single_thread.hpp
src/interpolate/: bilinear_avx2.hpp  bilinear_avx512.hpp  bilinear_plain.hpp  bilinear_sse4.hpp  types.hpp
